--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   shared_preferences: ^2.3.4
   google_fonts: ^6.2.1
   provider: ^6.0.0
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
