--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  webview_flutter: ^4.0.0
   shared_preferences: ^2.3.4
   google_fonts: ^6.2.1
   provider: ^6.0.0
   intl: ^0.20.1
+  audioplayers: ^6.1.0
+  youtube_explode_dart: ^2.1.0
+  file_picker: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -21,3 +25,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+
+
