--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   audioplayers: ^6.1.0
   file_picker: ^8.1.7
   metadata_god: ^1.0.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
