--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,16 @@ dependencies:
   file_picker: ^8.1.7
   metadata_god: ^1.0.0
   url_launcher: ^6.3.1
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+
+flutter_icons:
+  android: true
+  image_path: "assets/icon.png"
 
 flutter:
   uses-material-design: true
